Fixed x overflow on mobile.

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -21,9 +21,14 @@ html, body {
   // height: 100vh;
   width: 100vw;
   margin: 0;
-  overflow-x: none;
+  padding: 0;
   background-color: colors.$primary;
   overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+body {
+  position: relative;
 }
 
 // body::-webkit-scrollbar {
